@@ -4,11 +4,10 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
-import org.springframework.security.core.userdetails.UserDetailsService;
 import ru.inntotech.auth.model.entity.UserEntity;
 
 import java.util.Collection;
-import java.util.stream.Collectors;
+
 @RequiredArgsConstructor
 public class AppUserDetails implements UserDetails {
 
@@ -16,7 +15,7 @@ public class AppUserDetails implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return user.getRoles().stream().map(roleType -> new SimpleGrantedAuthority(roleType.name())).collect(Collectors.toList());
+        return user.getRoles().stream().map(roleType -> new SimpleGrantedAuthority(roleType.name())).toList();
     }
 
     @Override
